--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -12,3 +12,9 @@
     dest: "/opt/node_exporter/"
     extra_opts: [--strip-components=1]
     creates: "/opt/node_exporter/node_exporter"
+- name: Create node exporter service
+  become: true
+  template:
+    src: templates/node_exporter.service.j2
+    dest: "/etc/systemd/system/node_exporter.service"
+  # notify: restart node_exporter
