--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -17,4 +17,4 @@
   template:
     src: templates/node_exporter.service.j2
     dest: "/etc/systemd/system/node_exporter.service"
-  # notify: restart node_exporter
+  notify: restart node_exporter
