--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -18,3 +18,10 @@
     src: templates/node_exporter.service.j2
     dest: "/etc/systemd/system/node_exporter.service"
   notify: restart node_exporter
+- name: enable node exporter service
+  become: true
+  service:
+    name: node_exporter
+    enabled: yes
+    masked: no
+  notify: restart node_exporter
